# master-voxels

./: .gitignore  CMakeLists.txt
include/: config.h  cube.h  cubeapp.h  dialogloglistener.h  mainwindow.h  multitexture.h  ogreapp.h  ogrewidget.h  rttlistener.h  textureutil.h  transfergenerator.h  volume.h
resources/: painting.qrc
source/: config.cpp  converter.cpp  cube.cpp  cubeapp.cpp  dialogloglistener.cpp  main.cpp  mainwindow.cpp  multitexture.cpp  ogreapp.cpp  ogrewidget.cpp  rttlistener.cpp  textureutil.cpp  transfergenerator.cpp  volume.cpp
ui/: mainwindow.ui
